--- a/_config.yml
+++ b/_config.yml
@@ -20,19 +20,28 @@
 
 title: Streamlined Studios
 email: matt@streamlinedstudios.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: "Building iOS apps that boost productivity and keep you informed, effortlessly."
+#description: At Streamlined Studios, we craft innovative iOS apps designed to boost productivity and keep you informed. Whether it's receiving instant notifications for Redit updates or streamlining your daily tasks, our apps are built to help you stay organized, efficient, and ahead of the curve. Let us simplify your digital life—one app at a time.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: streamlinedstudios
 github_username:  streamlinedstudios
+logo: /assets/streamlinedstudios.png
+
+
+# Liquid
+liquid:
+  error_mode: strict
 
 # Build settings
 remote_theme: "mmistakes/jekyll-theme-basically-basic@1.4.5"
 plugins:
   - jekyll-feed
+
+
+# Pagination - https://jekyllrb.com/docs/pagination/
+paginate: 10
+paginate_path: /page:num/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -53,3 +62,13 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+# Front Matter Defaults
+defaults:
+  # _posts
+  - scope:
+      path: "_posts"
+      type: posts
+    values:
+      layout: post
+      read_time: true
